--- a/machine.html
+++ b/machine.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/aJ6922LvyL/Software-Engineer-Machine-Learning'>Software Engineer - Machine Learning - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/aJ6922LvyL/Software-Engineer-Machine-Learning'>Software Engineer - Machine Learning - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -83,7 +83,7 @@
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://apply.workable.com/warungpintar/j/C05DD39936/'>Machine Learning Engineer - Warung Pintar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/warungpintar/j/C05DD39936/'>Machine Learning Engineer - Warung Pintar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Familiar in using common algorithms (SVM, Naive Bayes, Random Forest) and 
 Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
@@ -104,7 +104,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698269592-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698269592-machine-learning-engineer'>Tradeshift Machine Learning Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -153,7 +153,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
+<h5><a href='https://apply.workable.com/bios-3/j/A55BA1465A/'>Machine Learning Developer - BIOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Perform research to apply machine learning (particularly deep learning, 
 reinforcement learning and transfer learning) to real world problems. Provide 
@@ -252,7 +252,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
+<h5><a href='https://boards.greenhouse.io/novetta/jobs/4481354002'>Job Application for Machine Learning Intern at Novetta</a></h5> 
 <p><span class="badge badge-light">Mc Lean, Virginia</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -304,7 +304,7 @@ ML;?...</p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -418,7 +418,7 @@ to?...</p>
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tsra-main/job/oldebfwH'>Xperi Careers - Automotive Vision - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tsra-main/job/oldebfwH'>Xperi Careers - Automotive Vision - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -447,7 +447,7 @@ to?...</p>
 <p>2 days ago ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/goodnotes/604496dd-f140-498d-901f-2ef991d8c6db?lever-origin=applied&lever-source%5B%5D=KeyValues'>GoodNotes - Senior Software Engineer, Machine Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/goodnotes/604496dd-f140-498d-901f-2ef991d8c6db?lever-origin=applied&lever-source%5B%5D=KeyValues'>GoodNotes - Senior Software Engineer, Machine Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Strong fundamentals of hardware and software architecture; Strong fundamentals 
 in the mathematics behind deep learning; Love for writing efficient and?...</p>
@@ -463,7 +463,7 @@ Company. Founded in 2016, ThirdEye uses AI to automate the world's 245m?...</p>
 your knowledge and curiosity, empower you to be creative, ambitious, & bold, 
 and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/reddit/jobs/1446347'>Job Application for Senior Machine Learning Engineer, Monetization at Reddit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/reddit/jobs/1446347'>Job Application for Senior Machine Learning Engineer, Monetization at Reddit</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -483,7 +483,7 @@ and?...</p>
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4480026002'>Job Application for Machine Learning Engineer - Language Modeling at SoundHound Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4480026002'>Job Application for Machine Learning Engineer - Language Modeling at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
