--- a/deep-learning.html
+++ b/deep-learning.html
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002?gh_src=34a6a6242'>Job Application for Deep Learning/Machine Learning Research ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
@@ -96,7 +96,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999697454914-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netatmo/743999697454914-internship-deep-learning-and-ai-research'>Netatmo INTERNSHIP - Deep Learning and AI Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -114,7 +114,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/nz8niniy9981a9maun74qcg3rc'>Deep Learning Data Scientist- Financial Services | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/nz8niniy9981a9maun74qcg3rc'>Deep Learning Data Scientist- Financial Services | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -167,7 +167,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/captionhealth/c3ac8da0-0b48-4e2e-876f-698406c5ddb0'>Caption Health - Deep Learning Research Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/captionhealth/c3ac8da0-0b48-4e2e-876f-698406c5ddb0'>Caption Health - Deep Learning Research Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -212,7 +212,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.courier-journal.com/Job?data=8NfUkj5irhJJqBry4onblDvXiMOQ6/TlKDRN4rW/6QcxQO0PlqyYIg%3D%3D'>Data Scientist Deep Learning job in Louisville, KY - The Courier Journal</a></h5> 
+<h5><a href='https://jobs.courier-journal.com/Job?data=8NfUkj5irhJJqBry4onblDvXiMOQ6/TlKDRN4rW/6QcxQO0PlqyYIg%3D%3D'>Data Scientist Deep Learning job in Louisville, KY - The Courier Journal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
@@ -258,11 +258,11 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Amsterdam Amsterdam  Amsterdam, Netherlands  Amsterdam</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.jobbnorge.no/en/available-jobs/job/176168/phd-research-fellow-in-ict-deep-reinforcement-learning-for-a-chatbot-based-personal-educator'>Phd Research Fellow in ICT - Deep Reinforcement Learning for a Chatbot Based Personal Educator (176168) | University of Agder</a></h5> 
+<h5><a href='https://www.jobbnorge.no/en/available-jobs/job/176168/phd-research-fellow-in-ict-deep-reinforcement-learning-for-a-chatbot-based-personal-educator'>Phd Research Fellow in ICT - Deep Reinforcement Learning for a Chatbot Based Personal Educator (176168) | University of Agder</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Senior-Software-Engineer--AI-Infrastructure---Deep-Learning_JR1924736'>Senior Software Engineer, AI Infrastructure - Deep Learning</a></h5> 
+<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/NVIDIAExternalCareerSite/job/US-CA-Santa-Clara/Senior-Software-Engineer--AI-Infrastructure---Deep-Learning_JR1924736'>Senior Software Engineer, AI Infrastructure - Deep Learning</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... ... the hottest state of the art fields: Deep Learning, Artificial Intelligence, and 
 Autonomous Vehicles. If you're a creative and autonomous computer scientist 
@@ -381,7 +381,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862075'>Job Application for Research Scientist (Machine Learning/Deep Learning) at Dataminr</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1862075'>Job Application for Research Scientist (Machine Learning/Deep Learning) at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-09-12</p>
 <hr/>
@@ -398,7 +398,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -414,11 +414,11 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<h5><a href='https://crisalix.workable.com/j/EEC665F01E'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/EEC665F01E'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Kharkiv Oblast, Ukraine</span></p>
 <p>Posted on: 2019-09-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sonyinteractiveentertainmentplaystation/jobs/1855962'>Job Application for Sr. Software Engineer, AI and Deep Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... We are offering a career opportunity combining both your passion and skills as a 
 software engineer while also allowing you to work with state-of-the-art?...</p>
@@ -482,7 +482,7 @@ machine learning algorithms, playing with state of the art deep learning models?
 <p><span class="badge badge-light">St. Louis, Missouri  Seattle, Washington  Chicago, Illinois</span></p>
 <p>Posted on: 2019-08-18</p>
 <hr/>
-<h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nvidia.wd5.myworkdayjobs.com/en-US/UniversityJobs/job/Canada-Toronto/Deep-Learning-Intern---Content---Technology--Winter-Spring-2020-_JR1923762-2'>Deep Learning Intern - Content & Technology (Winter/Spring 2020)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Aug 7, 2019 ... Developer Technology Intern - AI | Canada, Toronto ? Deep Learning Intern ... 
 Compute Performance Developer Technology Intern - CUDA | Canada, Toronto.</p>
